--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,6 @@
     <include name="jackson/jackson-databind-2.2.3.jar"/>
     <include name="kbase/shock/shock-client-0.0.7.jar" />
     <include name="kbase/kbase-common-temp.jar" />
-    <include name="junit/junit-4.9.jar"/>
     <include name="kbase/workspace/WorkspaceClient-0.2.0.jar"/>
     <include name="kbase/genomes/kbase-genomes-20140411.jar"/>
     <include name="apache_commons/commons-codec-1.8.jar"/>
@@ -39,6 +38,11 @@
 
   <path id="compile.classpath">
     <fileset refid="serverlib"/>
+  </path>
+
+  <path id="test.classpath">
+    <path refid="compile.classpath"/>
+    <pathelement path="${classes}"/>
   </path>
 
   <target name="init" description="make directories">
@@ -88,25 +92,23 @@
     <mkdir dir="${docs}"/>
   </target>
 
-  <target name="nersc" depends="init" description="compile the source">
-    <!-- Compile class files-->
-    <javac destdir="${classes}" includeantruntime="false" target="1.7" source="1.7" debug="true" classpathref="compile.classpath">
-      <src path="${src}"/>
-    </javac>
-    <!-- Copy resource files-->
-    <copy todir="${classes}">
-      <fileset dir="${src}">
-      </fileset>
-    </copy>
-    <unzip dest="${classes}">
-        <fileset refid="serverlib"/>
-    </unzip>
-    <jar destfile="${dist}/NerscClusterGenomeExport.jar" basedir="${classes}">
-      <manifest>
-        <attribute name="Main-Class" value="us.kbase.kbasegenefamilies.prepare.GenomeExport"/>
-      </manifest>
-    </jar>
-    <delete dir="${classes}"/>
+  <target name="preparejunitreportdir" if="env.JENKINS_REPORT_DIR">
+    <delete dir="${env.JENKINS_REPORT_DIR}"/>
+    <mkdir dir="${env.JENKINS_REPORT_DIR}"/>
+  </target>
+
+  <target name="test" depends="compile, preparejunitreportdir" description="Testing gene families service">
+    <junit fork="yes" maxmemory="3G" haltonfailure="yes">
+      <classpath refid="test.classpath"/>
+      <formatter type="plain" usefile="false" />
+      <formatter type="xml" usefile="true" if="env.JENKINS_REPORT_DIR"/>
+      <batchtest todir="${env.JENKINS_REPORT_DIR}">
+        <fileset dir="${src}">
+          <include name="**/test/**/**Test.java"/>
+        </fileset>
+      </batchtest>
+    </junit>
+    <fail message="Test failure detected, check test results." if="test.failed" />
   </target>
 
   <target name="clean" description="clean up" >
