--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,7 @@
     <include name="servlet/servlet-api-2.5.jar"/>
     <include name="syslog4j/syslog4j-0.9.46.jar"/>
     <include name="junit/junit-4.9.jar"/>
+    <include name="strbio/strbio-1.3.jar"/>
     <include name="kbase/auth/kbase-auth-1398468950-3552bb2.jar"/>
     <include name="jackson/jackson-annotations-2.2.3.jar"/>
     <include name="jackson/jackson-core-2.2.3.jar"/>
