Update to prepare DomainLibraries for all sets of domains that we're going to use.  Fixed prepare_3rd_party_dbs.sh to save unindexed files for PSSM databases.

--- a/build.xml
+++ b/build.xml
@@ -68,7 +68,7 @@
     </unzip>
     <jar destfile="${dist}/${jar.file}" basedir="${classes}">
       <manifest>
-        <attribute name="Main-Class" value="us.kbase.kbasegenefamilies.test.EColiTest"/>
+        <attribute name="Main-Class" value="us.kbase.kbasegenefamilies.prepare.DomainModelLibPreparation"/>
       </manifest>
     </jar>
   </target>
