--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
   <property name="war.lib" value="${war}/lib"/>
   <property name="docs" value="docs"/>
   <property name="jarsdir" value="../jars/lib/jars"/>
+  <property name="bindir" value="data/bin/"/>
   <property name="deploycfg" value=""/>
 
   <fileset dir="${jarsdir}" id="serverlib">
@@ -33,8 +34,13 @@
     <include name="kbase/kbase-common-temp.jar" />
     <include name="kbase/workspace/WorkspaceClient-0.2.0.jar"/>
     <include name="kbase/genomes/kbase-genomes-20140411.jar"/>
+    <include name="apache_commons/commons-logging-1.1.1.jar"/>
+    <include name="apache_commons/http/httpclient-4.3.1.jar"/>
+    <include name="apache_commons/http/httpcore-4.3.jar"/>
+    <include name="apache_commons/http/httpmime-4.3.1.jar"/>
     <include name="apache_commons/commons-codec-1.8.jar"/>
     <include name="apache_commons/commons-io-2.4.jar"/>
+    <include name="apache_commons/commons-lang3-3.1.jar"/>
   </fileset>
 
   <path id="compile.classpath">
@@ -61,6 +67,9 @@
     <copy todir="${classes}">
       <fileset dir="${deploycfg}">
 	<include name="*.properties"/>
+      </fileset>
+      <fileset dir="${bindir}">
+	<include name="*"/>
       </fileset>
     </copy>
     <unzip dest="${classes}">
