Added client-side tests, and fixed a few server bugs

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -1,7 +1,7 @@
 [gene_families]
 scratch=/mnt/gene_families
-#workspace.srv.url=https://kbase.us/services/ws
-workspace.srv.url=http://dev04.berkeley.kbase.us:7058
+workspace.srv.url=https://kbase.us/services/ws
+# workspace.srv.url=http://dev04.berkeley.kbase.us:7058
 jobstatus.srv.url=https://kbase.us/services/userandjobstate/
 queue.db.dir=/mnt/gene_families/queue
 ###
