--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
   <property name="war.file" value="KBaseGeneFamilies.war"/>
   <property name="war" value="war"/>
   <property name="war.lib" value="${war}/lib"/>
-  <property name="docs" value="docs"/>
+  <property name="docs" value="docs/javadoc"/>
   <property name="jarsdir" value="../jars/lib/jars"/>
   <property name="bindir" value="data/bin/"/>
   <property name="deploycfg" value=""/>
@@ -104,8 +104,16 @@
     <delete dir="${war}"/>
   </target>
 
-  <target name="docs" description="prepare documentation">
-    <mkdir dir="${docs}"/>
+  <target name="javadoc" description="build javadocs">
+    <javadoc access="protected" author="false" classpathref="compile.classpath"
+      destdir="${docs}" nodeprecated="false" nodeprecatedlist="false"
+      noindex="false" nonavbar="false" notree="false"
+      source="1.7" splitindex="true" use="true" version="true"
+      packagenames="us.kbase.kbasegenefamilies.*" sourcepath="${src}">
+      <link href="http://download.oracle.com/javase/7/docs/api/"/>
+      <link href="http://fasterxml.github.io/jackson-core/javadoc/2.2.0/"/>
+      <link href="http://fasterxml.github.io/jackson-databind/javadoc/2.2.0/"/>
+    </javadoc>
   </target>
 
   <target name="preparejunitreportdir" if="env.JENKINS_REPORT_DIR">
