--- a/deploy.cfg
+++ b/deploy.cfg
@@ -1,10 +1,8 @@
 [gene_families]
 scratch=/mnt/gene_families
-workspace.srv.url=https://kbase.us/services/ws
-# workspace.srv.url=http://dev04.berkeley.kbase.us:7058
+workspace.srv.url=https://kbase.us/services/ws/
+genefamilies.srv.url=http://localhost:8123
+shock.srv.url=https://kbase.us/services/shock-api/
 jobstatus.srv.url=https://kbase.us/services/userandjobstate/
 queue.db.dir=/mnt/gene_families/queue
-###
-## This sets the number of background tree building jobs we allow - we should probably
-## set this to be close to the number of cores
 thread.count=1
