Use production URLs in deploy.cfg

--- a/deploy.cfg
+++ b/deploy.cfg
@@ -1,7 +1,7 @@
 [gene_families]
 scratch=/mnt/gene_families
 workspace.srv.url=https://kbase.us/services/ws/
-genefamilies.srv.url=http://localhost:8123
+genefamilies.srv.url=https://kbase.us/services/gene_families/
 shock.srv.url=https://kbase.us/services/shock-api/
 jobstatus.srv.url=https://kbase.us/services/userandjobstate/
 queue.db.dir=/mnt/gene_families/queue
